--- a/organizers.html
+++ b/organizers.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -14,7 +13,6 @@
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -54,7 +52,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Organizers</h1>
-        <p>2015 TEDxPOSTECH을 준비한 8명의 2nd Organizer들을 소개합니다.</p>
+        <p>2016 TEDxPOSTECH을 준비한 8명의 3rd Organizer들을 소개합니다.</p>
       </div>
     </div>
 
@@ -142,139 +140,3 @@
 	
   </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="ko">
-
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>2015 TEDxPOSTECH</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/organizers.css">
-    <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-  </head>
-
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><img src="./images/logo.png"></a>
-        </div>
-        <ul class="pull-right nav nav-pills">
-          <li><a href="about.html">About</a></li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li id="active"><a href="organizers.html">Organizers</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="register.html">Register</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Organizers</h1>
-        <p>2015 TEDxPOSTECH을 준비한 8명의 2nd Organizer들을 소개합니다.</p>
-      </div>
-    </div>
-
-    <div class="organizers">
-      <div class="container">
-
-        <div class="row">
-          <div class="col-xs-1"></div>
-          <div class="col-xs-10">
-            <h3>Message from TEDxPOSTECH 2nd Organizer Director</h3>
-            <p>안녕하세요. TEDxPOSTECH 두 번째 행사의 디렉팅을 맡게된 윤진혁입니다.</p>
-            <p>어느덧 첫 번째 TEDxPOSTECH이 개최된지 4년이란 시간이 흘렀습니다. 2014년 11월부터 TED가 사라진 POSTECH에 숨을 불어넣는 기간은 분명 저희 Oragnizer들에게 너무나도 힘든 시간이었습니다. 그러나 누군가는 'Ideas worth spreading' 이라는 모토의 가치를 용기내어 보여주어야 한다는 신념아래 뭉친 저희 Oragnizer들은 그 모토를 대한민국 최고의 이공계 대학인 POSTECH에 전파하고자 약 1년간의 긴 시간동안 최선을 다해 준비해왔습니다. 그리고 마침내, 다가오는 2015년 10월 31일, 포스코 국제관에서 여러분들 앞에 TEDxPOSTECH이 그 두 번째 모습을 드러내게 되었습니다.</p>
-            <p>여러분들은 물음표(Question)이라는 주제를 통해 각기 다른 연사분들의 진솔한 이야기들을 들으실 것입니다. '우리 모두가 해결해야 하는 질문', '사회에 던지고 싶은 질문', '한 때 치열하게 고민한 끝에 답을 찾아낸 질문', TEDxPOSTECH의 두 번째 행사에서는 우리 주변에 존재하는 다양한 형태의 물음표와 그에 대한 아이디어를 나누고자 합니다.</p>
-            <p>여러분들의 물음표는 무엇인가요? 그 물음표에 대한 답의 소중한 퍼즐조각들을 새롭게 도약하는 TEDxPOSTECH의 두 번째 행사에서 찾으시길 바랍니다.</p>
-            <p>감사합니다.</p>
-            <p id="right-align">TEDxPOSTECH 2nd Organizer Director</p>
-            <p id="right-align">윤진혁 올림.</p>
-            <div class="col-xs-1"></div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/dbswlsgur.jpg" class="img-circle center-block">
-              <p class="center-block">윤진혁<br>ME 14</p>
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/rkdwldn.jpg" class="img-circle center-block">
-              <p class="center-block">강지우<br>LIFE 07</p>
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/rnjsdmswl.jpg" class="img-circle center-block">
-              <p class="center-block">권은지<br>MATH 13</p>
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/qkrtldms.jpg" class="img-circle center-block">
-              <p class="center-block">박시은<br>EE 14</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row" id="last">
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/dbwodnjs.jpg" class="img-circle center-block">
-              <p class="center-block">유재원<br>MATH 13</p>
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/dltldn.jpg" class="img-circle center-block">
-              <p class="center-block">이시우<br>MATH 13</p>
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/dlwhdrjs.jpg" class="img-circle center-block">
-              <p class="center-block">이종건<br>EE 14</p>
-            </div>
-          </div>
-          <div class="col-xs-3">
-            <div class="profile center-block">
-              <img src="./images/dlaqjatn.jpg" class="img-circle center-block">
-              <p class="center-block">임범수<br>CSE 14</p>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-        <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
-      </div>
-    </div>
-	
-  </body>
-</html>
->>>>>>> 33c380bd0cec2cd7c37ac155b84f70529d750fea
