--- a/register.html
+++ b/register.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -14,7 +13,6 @@
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -51,10 +49,10 @@
       </div>
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="register">
       <div class="container">
         <h1>Register Now</h1>
-        <p>2015 TEDxPOSTECH에 참가하세요.</p>
+        <p>2016 TEDxPOSTECH에 참가하세요.</p>
       </div>
     </div>
 
@@ -64,7 +62,7 @@
         <div class="row information">
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-calendar" aria-hidden="true"></div>
-            <p class="info">2015/10/31<br>Halloween</p>
+            <p class="info">2015/11/05</p>
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-map-marker" aria-hidden="true"></div>
@@ -72,7 +70,7 @@
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-time" aria-hidden="true"></div>
-            <p class="info">From 14:00<br>Until 20:30</p>
+            <p class="info">From 13:00<br>Until 20:30</p>
           </div>
           <div class="col-xs-3">
             <div class="glyphicon glyphicon-cutlery" aria-hidden="true"></div>
@@ -83,23 +81,27 @@
         <div class="row schedule">
           <table class="table table-striped">
             <thead>
-              <th colspan="2">행사 당일 일정(10월 31일 토요일)*</th>
+              <th colspan="2">행사 당일 일정(11월 5일 토요일)*</th>
             </thead>
             <tfoot>
               <tr>
                 <td colspan="2">*행사 일정은 당일 사정에 의해 변동될 수 있습니다.</td>
               </tr>
               <tr>
-                <td colspan="2">**TED talk는 TED 강연 영상 중 하나를 상영하는 시간을 의미합니다.</td>
+                <td colspan="2">**TED talk는 TED 강연 영상 중 하나를 상영하는 시간을 의미.</td>
               </tr>
               <tr>
-                <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미합니다.</td>
+                <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미.</td>
               </tr>
               <tr>
-                <td colspan="2">****After Party는 국제관에서 도보로 20분 거리인 효자시장의 RIO 카페에서 진행됩니다.</td>
+                <td colspan="2">****After Party는 아직 장소가 미정입니다.</td>
               </tr>
             </tfoot>
             <tbody>
+              <tr>
+                <td>13:00 ~ 14:00</td>
+                <td>리허설</td>
+              </tr>
               <tr>
                 <td>14:00 ~ 14:30</td>
                 <td>입장 및 현장 등록</td>
@@ -122,22 +124,30 @@
               </tr>
               <tr>
                 <td>16:15 ~ 16:35</td>
-                <td>Break Time, TED Talk #2</td>
+                <td>1부 연사 Q&A</td>
               </tr>
               <tr>
                 <td>16:35 ~ 17:00</td>
-                <td>TEDx Talk #4</td>
+                <td>Break Time, TED Talk #2</td>
               </tr>
               <tr>
                 <td>17:00 ~ 17:25</td>
-                <td>TEDx Talk #5</td>
+                <td>TEDx Talk #4</td>
               </tr>
               <tr>
                 <td>17:25 ~ 17:50</td>
-                <td>TEDx Talk #6</td>
+                <td>TEDx Talk #5</td>
               </tr>
               <tr>
                 <td>17:50 ~ 18:10</td>
+                <td>TEDx Talk #6<td>
+              </tr>
+              <tr>
+                <td>18:10 ~ 18:30</td>
+                <td>2부 연사 Q&A</td>
+              </tr>
+              <tr>
+                <td>18:30 ~ 18:50</td>
                 <td>클로징</td>
               </tr>
               <tr>
@@ -170,8 +180,8 @@
             </div>
 
             <h3>Regular Registration</h3>
-            <p>Regular 참가신청 비용은 예약 10,000원이며 현장 납입시 15,000원입니다. 신청은 10월 15일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
-            <p><a  target="_blank" class="btn btn-primary" role="button" id="notavailable">Sold Out</a></p>
+            <p>Regular 참가신청 비용은 예약 10,000원이며 현장 납입시 15,000원입니다. 신청은 10월 12일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
+            <p><a type="button" data-toggle="modal" data-target="#form" class="btn btn-primary" role="button" id="available">Register</a></p>
 
           </div>
 
@@ -186,189 +196,23 @@
         <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
       </div>
     </div>
+
+    <div class="modal fade" tabindex="-1" role="dialog" id="form">
+      <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title">2016 TEDxPOSTECH Regular Register</h4>
+          </div>
+          <div class="modal-body">
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfiInAEMB70PxT0eC7ahk-UkZz1Gd749LIEVf4l2xGnrgm4Cw/closedform" height="500" width="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">닫기</button>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+    </div><!-- /.modal -->
 	
   </body>
 </html>
-=======
-<!DOCTYPE html>
-<html lang="ko">
-
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>2015 TEDxPOSTECH</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/register.css">
-    <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-  </head>
-
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><img src="./images/logo.png"></a>
-        </div>
-        <ul class="pull-right nav nav-pills">
-          <li><a href="about.html">About</a></li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="organizers.html">Organizers</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
-          <li id="active"><a href="register.html">Register</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Register Now</h1>
-        <p>2015 TEDxPOSTECH에 참가하세요.</p>
-      </div>
-    </div>
-
-    <div class="register">
-      <div class="container">
-
-        <div class="row information">
-          <div class="col-xs-3">
-            <div class="glyphicon glyphicon-calendar" aria-hidden="true"></div>
-            <p class="info">2015/10/31<br>Halloween</p>
-          </div>
-          <div class="col-xs-3">
-            <div class="glyphicon glyphicon-map-marker" aria-hidden="true"></div>
-            <p class="info">POSCO 국제관<br>1층 국제회의장</p>
-          </div>
-          <div class="col-xs-3">
-            <div class="glyphicon glyphicon-time" aria-hidden="true"></div>
-            <p class="info">From 14:00<br>Until 20:30</p>
-          </div>
-          <div class="col-xs-3">
-            <div class="glyphicon glyphicon-cutlery" aria-hidden="true"></div>
-            <p class="info">After Party<br>참가비 5,000원</p>
-          </div>
-        </div>
-
-        <div class="row schedule">
-          <table class="table table-striped">
-            <thead>
-              <th colspan="2">행사 당일 일정(10월 31일 토요일)*</th>
-            </thead>
-            <tfoot>
-              <tr>
-                <td colspan="2">*행사 일정은 당일 사정에 의해 변동될 수 있습니다.</td>
-              </tr>
-              <tr>
-                <td colspan="2">**TED talk는 TED 강연 영상 중 하나를 상영하는 시간을 의미합니다.</td>
-              </tr>
-              <tr>
-                <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미합니다.</td>
-              </tr>
-              <tr>
-                <td colspan="2">****After Party는 국제관에서 도보로 20분 거리인 효자시장의 RIO 카페에서 진행됩니다.</td>
-              </tr>
-            </tfoot>
-            <tbody>
-              <tr>
-                <td>14:00 ~ 14:30</td>
-                <td>입장 및 현장 등록</td>
-              </tr>
-              <tr>
-                <td>14:30 ~ 15:00</td>
-                <td>오프닝 & TED Talk** #1</td>
-              </tr>
-              <tr>
-                <td>15:00 ~ 15:25</td>
-                <td>TEDx Talk #1</td>
-              </tr>
-              <tr>
-                <td>15:25 ~ 15:50</td>
-                <td>TEDx Talk #2</td>
-              </tr>
-              <tr>
-                <td>15:50 ~ 16:15</td>
-                <td>TEDx Talk #3</td>
-              </tr>
-              <tr>
-                <td>16:15 ~ 16:35</td>
-                <td>Break Time, TED Talk #2</td>
-              </tr>
-              <tr>
-                <td>16:35 ~ 17:00</td>
-                <td>TEDx Talk #4</td>
-              </tr>
-              <tr>
-                <td>17:00 ~ 17:25</td>
-                <td>TEDx Talk #5</td>
-              </tr>
-              <tr>
-                <td>17:25 ~ 17:50</td>
-                <td>TEDx Talk #6</td>
-              </tr>
-              <tr>
-                <td>17:50 ~ 18:10</td>
-                <td>클로징</td>
-              </tr>
-              <tr>
-                <td>19:00 ~      </td>
-                <td>After Party****</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-6 left">
-
-            <div class="thumbnail">
-              <img src="./images/early_bird.png">
-            </div>
-
-            <h3>Eary Bird Registration</h3>
-            <p></p>
-            <p>Early Bird 참가신청은 행사의 안정적인 자원확보를 목적으로 먼저 참가비를 내주시는 청중분들께 기존 10,000원인 참가비를 50% 할인해드리는 제도입니다. 참가 신청을 보내신 후 입금한 선착순 30명에게만 주어지는 혜택이며, 이에 따른 일반 참가자와의 차별은 전혀 없습니다.</p>
-            <p><a target="_blank" class="btn btn-primary" role="button" id="notavailable">Sold Out</a></p>
-
-          </div>
-
-          <div class="col-xs-6">
-
-            <div class="thumbnail">
-              <img src="./images/regular.jpg">
-            </div>
-
-            <h3>Regular Registration</h3>
-            <p>Regular 참가신청 비용은 예약 10,000원이며 현장 납입시 15,000원입니다. 신청은 10월 15일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
-            <p><a  target="_blank" class="btn btn-primary" role="button" id="notavailable">Sold Out</a></p>
-
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-        <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
-      </div>
-    </div>
-	
-  </body>
-</html>
->>>>>>> 33c380bd0cec2cd7c37ac155b84f70529d750fea
