--- a/sponsors.html
+++ b/sponsors.html
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ko">
 
@@ -14,18 +13,7 @@
     <script src="./bootstrap-3.3.7-dist/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/index.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </head>
           
 
@@ -51,7 +39,7 @@
       </div>
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="sponsor">
       <div class="container">
         <h1>Sponsors</h1>
         <p>행사 진행에 도움을 주신 다양한 스폰서들을 소개합니다.</p>
@@ -90,7 +78,7 @@
           <div class="col-xs-4">
             <div class="thumbnail">
               <a href="http://www.postech.ac.kr/" target="_blank">
-                <img src="./images/postech.png">
+                <img src="./images/sponsors/postech.png">
               </a>
             </div>
           </div>
@@ -98,7 +86,7 @@
           <div class="col-xs-4">
             <div class="thumbnail">
               <a href="https://www.pentasecurity.com/" target="_blank">
-                <img src="./images/pentasecurity.png">
+                <img src="./images/sponsors/pentasecurity.png">
               </a>
             </div>
           </div>
@@ -114,7 +102,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/postechpbs" target="_blank">
-                <img src="./images/pbs.png">
+                <img src="./images/sponsors/pbs.png">
               </a>
             </div>
           </div>
@@ -122,7 +110,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/PoApper" target="_blank">
-                <img src="./images/poapper.png">
+                <img src="./images/sponsors/poapper.png">
               </a>
             </div>
           </div>
@@ -130,7 +118,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/ramenberavo" target="_blank">
-                <img src="./images/beravo.jpg">
+                <img src="./images/sponsors/beravo.jpg">
               </a>
             </div>
           </div>
@@ -138,7 +126,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/AgitPohang" target="_blank">
-                <img src="./images/agit.jpg">
+                <img src="./images/sponsors/agit.jpg">
               </a>
             </div>
           </div>
@@ -154,7 +142,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="http://www.twosome.co.kr/" target="_blank">
-                <img src="./images/twosome.jpg">
+                <img src="./images/sponsors/twosome.jpg">
               </a>
             </div>
           </div>
@@ -162,7 +150,7 @@
           <div class="col-xs-4">
             <div class="thumbnail">
               <a href="http://www.dominos.co.kr/" target="_blank">
-                <img src="./images/domino.jpg">
+                <img src="./images/sponsors/domino.jpg">
               </a>
             </div>
           </div>
@@ -170,7 +158,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="http://map.naver.com/local/siteview.nhn?code=36957506" target="_blank">
-                <img src="./images/rio.jpg">
+                <img src="./images/sponsors/rio.jpg">
               </a>
             </div>
           </div>
@@ -192,190 +180,4 @@
     </div>
 	
   </body>
-=======
-<!DOCTYPE html>
-<html lang="ko">
-
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-    <title>2015 TEDxPOSTECH</title>
-
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap-theme.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="./css/common.css">
-    <link rel="stylesheet" href="./css/sponsors.css">
-    <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
-  </head>
-
-  <body>
-    <div class="header">
-      <div class="container">
-        <div class="logo">
-          <a href="index.html"><img src="./images/logo.png"></a>
-        </div>
-        <ul class="pull-right nav nav-pills">
-          <li><a href="about.html">About</a></li>
-          <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="organizers.html">Organizers</a></li>
-          <li id="active"><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="register.html">Register</a></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Sponsors</h1>
-        <p>행사 진행에 도움을 주신 다양한 스폰서들을 소개합니다.</p>
-      </div>
-    </div>
-
-    <div class="sponsors">
-      <div class="container">
-
-        <div class="row">
-
-          <div class="col-xs-3"></div>
-
-          <div class="col-xs-6">
-            <div class="thumbnail center-block" id="biglogo">
-              <img src="./images/biglogo.png">
-            </div>
-          </div>
-
-          <div class="col-xs-3"></div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-12">
-            <p>with</p>
-          </div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-2"></div>
-
-          <div class="col-xs-4">
-            <div class="thumbnail">
-              <a href="http://www.postech.ac.kr/" target="_blank">
-                <img src="./images/postech.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-4">
-            <div class="thumbnail">
-              <a href="https://www.pentasecurity.com/" target="_blank">
-                <img src="./images/pentasecurity.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2"></div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-2"></div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/postechpbs" target="_blank">
-                <img src="./images/pbs.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/PoApper" target="_blank">
-                <img src="./images/poapper.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/ramenberavo" target="_blank">
-                <img src="./images/beravo.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/AgitPohang" target="_blank">
-                <img src="./images/agit.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2"></div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-2"></div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="http://www.twosome.co.kr/" target="_blank">
-                <img src="./images/twosome.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-4">
-            <div class="thumbnail">
-              <a href="http://www.dominos.co.kr/" target="_blank">
-                <img src="./images/domino.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="http://map.naver.com/local/siteview.nhn?code=36957506" target="_blank">
-                <img src="./images/rio.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2"></div>
-
-        </div>
-
-        
-
-      </div>
-    </div>
-
-    <div class="footer">
-      <div class="container">
-        <p class="pull-left">※This independent TEDx event is operated under license from TED.</p>
-        <p class="pull-right"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> tedx.postech.organizer@gmail.com</p>
-      </div>
-    </div>
-	
-  </body>
->>>>>>> 33c380bd0cec2cd7c37ac155b84f70529d750fea
 </html>
