--- a/2015.html
+++ b/2015.html
@@ -14,16 +14,6 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </head>
           
 
@@ -259,6 +249,129 @@
           </div>
         </div>
 
+      </div>
+    </div>
+
+    <div class="sponsors">
+      <div class="container">
+
+        <div class="row">
+
+          <div class="col-xs-3"></div>
+
+          <div class="col-xs-6">
+            <div class="thumbnail center-block" id="biglogo">
+              <img src="./images/biglogo.png">
+            </div>
+          </div>
+
+          <div class="col-xs-3"></div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-12">
+            <p>with</p>
+          </div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-2"></div>
+
+          <div class="col-xs-4">
+            <div class="thumbnail">
+              <a href="http://www.postech.ac.kr/" target="_blank">
+                <img src="./images/sponsors/postech.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-4">
+            <div class="thumbnail">
+              <a href="https://www.pentasecurity.com/" target="_blank">
+                <img src="./images/sponsors/pentasecurity.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2"></div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-2"></div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail">
+              <a href="https://www.facebook.com/postechpbs" target="_blank">
+                <img src="./images/sponsors/pbs.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail">
+              <a href="https://www.facebook.com/PoApper" target="_blank">
+                <img src="./images/sponsors/poapper.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail">
+              <a href="https://www.facebook.com/ramenberavo" target="_blank">
+                <img src="./images/sponsors/beravo.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail">
+              <a href="https://www.facebook.com/AgitPohang" target="_blank">
+                <img src="./images/sponsors/agit.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2"></div>
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-2"></div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail">
+              <a href="http://www.twosome.co.kr/" target="_blank">
+                <img src="./images/sponsors/twosome.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-4">
+            <div class="thumbnail">
+              <a href="http://www.dominos.co.kr/" target="_blank">
+                <img src="./images/sponsors/domino.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2">
+            <div class="thumbnail">
+              <a href="http://map.naver.com/local/siteview.nhn?code=36957506" target="_blank">
+                <img src="./images/sponsors/rio.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-2"></div>
+
+        </div>
       </div>
     </div>
 
