--- a/organizers.html
+++ b/organizers.html
@@ -14,16 +14,6 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </head>
           
 
@@ -49,7 +39,7 @@
       </div>
     </div>
 
-    <div class="jumbotron">
+    <div class="jumbotron" id="organizers">
       <div class="container">
         <h1>Organizers</h1>
         <p>2016 TEDxPOSTECH을 준비한 8명의 3rd Organizer들을 소개합니다.</p>
@@ -62,14 +52,13 @@
         <div class="row">
           <div class="col-xs-1"></div>
           <div class="col-xs-10">
-            <h3>Message from TEDxPOSTECH 2nd Organizer Director</h3>
-            <p>안녕하세요. TEDxPOSTECH 두 번째 행사의 디렉팅을 맡게된 윤진혁입니다.</p>
-            <p>어느덧 첫 번째 TEDxPOSTECH이 개최된지 4년이란 시간이 흘렀습니다. 2014년 11월부터 TED가 사라진 POSTECH에 숨을 불어넣는 기간은 분명 저희 Oragnizer들에게 너무나도 힘든 시간이었습니다. 그러나 누군가는 'Ideas worth spreading' 이라는 모토의 가치를 용기내어 보여주어야 한다는 신념아래 뭉친 저희 Oragnizer들은 그 모토를 대한민국 최고의 이공계 대학인 POSTECH에 전파하고자 약 1년간의 긴 시간동안 최선을 다해 준비해왔습니다. 그리고 마침내, 다가오는 2015년 10월 31일, 포스코 국제관에서 여러분들 앞에 TEDxPOSTECH이 그 두 번째 모습을 드러내게 되었습니다.</p>
-            <p>여러분들은 물음표(Question)이라는 주제를 통해 각기 다른 연사분들의 진솔한 이야기들을 들으실 것입니다. '우리 모두가 해결해야 하는 질문', '사회에 던지고 싶은 질문', '한 때 치열하게 고민한 끝에 답을 찾아낸 질문', TEDxPOSTECH의 두 번째 행사에서는 우리 주변에 존재하는 다양한 형태의 물음표와 그에 대한 아이디어를 나누고자 합니다.</p>
-            <p>여러분들의 물음표는 무엇인가요? 그 물음표에 대한 답의 소중한 퍼즐조각들을 새롭게 도약하는 TEDxPOSTECH의 두 번째 행사에서 찾으시길 바랍니다.</p>
+            <h3>Message from TEDxPOSTECH 3rd Organizer Director</h3>
+            <p>안녕하세요. TEDxPOSTECH 세 번째 행사의 진행을 맡게 된 강한솔입니다.</p>
+            <p>여러분에게 TEDx는 어떤 기억을 불러 일으키나요? TEDx 라는 이름이 저희들에게 갖는 의미는 특별합니다. “Ideas worth spreading”이라는 목적 아래 TED는 많은 이들에게 비전을 제시해 주었고, 더 나은 내일을 꿈꾸게 하고, 변화할 수 있는 힘을 주었습니다. 그래서 오는 11월 5일, 사회 곳곳의 열정 넘치는 분들을 초대하여 학내 구성원들과 이 특별한 경험을 공유하고자 합니다. 쉬운 일은 아니었습니다. 그럼에도 TEDxPOSTECH의 개최를 위해 끝까지 달려올 수 있었던 힘은, ‘정말로 사람들에게 이 멋진 이야기들을 소개하고 싶다’는 열망입니다. TED가 저희를 비롯한 많은 사람들에게 지금까지 그래왔듯이 좀 더 흥미롭게 이야기를 전달하고 싶고, 사람들이 오늘과 다른 내일을 살아내는 계기가 되도록 하자는 신념이 있기 때문입니다. 이러한 진심을 6가지의 특별한 아이디어와 소중한 경험에 담았습니다.</p>
+            <p>오는 11월 5일, 3회 TEDxPOSTECH 행사를 통해 대학 생활의 소중한 기억을 담아 가시길 바랍니다. </p>
             <p>감사합니다.</p>
-            <p id="right-align">TEDxPOSTECH 2nd Organizer Director</p>
-            <p id="right-align">윤진혁 올림.</p>
+            <p id="right-align">TEDxPOSTECH 3rd Organizer</p>
+            <p id="right-align">일동 올림.</p>
             <div class="col-xs-1"></div>
           </div>
         </div>
@@ -77,26 +66,26 @@
         <div class="row">
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/dbswlsgur.jpg" class="img-circle center-block">
-              <p class="center-block">윤진혁<br>ME 14</p>
+              <img src="./images/organizers/2016/rkdgksthf.jpg" class="img-circle center-block">
+              <p class="center-block">강한솔<br>LIFE 15</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/rkdwldn.jpg" class="img-circle center-block">
-              <p class="center-block">강지우<br>LIFE 07</p>
+              <p class="center-block">김영채<br>EE 15</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/rnjsdmswl.jpg" class="img-circle center-block">
-              <p class="center-block">권은지<br>MATH 13</p>
+              <p class="center-block">김채윤<br>PHYS 15</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/qkrtldms.jpg" class="img-circle center-block">
-              <p class="center-block">박시은<br>EE 14</p>
+              <img src="./images/organizers/2016/dlalsrud.jpg" class="img-circle center-block">
+              <p class="center-block">이민경<br>ME 15</p>
             </div>
           </div>
         </div>
@@ -105,25 +94,25 @@
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/dbwodnjs.jpg" class="img-circle center-block">
-              <p class="center-block">유재원<br>MATH 13</p>
+              <p class="center-block">이용우<br>EE 14</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/dltldn.jpg" class="img-circle center-block">
-              <p class="center-block">이시우<br>MATH 13</p>
+              <p class="center-block">임동현<br>ME 14</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/dlwhdrjs.jpg" class="img-circle center-block">
-              <p class="center-block">이종건<br>EE 14</p>
+              <p class="center-block">최상범<br>EE 15</p>
             </div>
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/dlaqjatn.jpg" class="img-circle center-block">
-              <p class="center-block">임범수<br>CSE 14</p>
+              <img src="./images/organizers/2016/ghddlswn.jpg" class="img-circle center-block">
+              <p class="center-block">홍인주<br>PCE 15</p>
             </div>
           </div>
         </div>
