--- a/register.html
+++ b/register.html
@@ -14,16 +14,6 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </head>
           
 
@@ -94,7 +84,7 @@
                 <td colspan="2">***TEDx talks는 초청된 연사들의 강연하는 시간을 의미.</td>
               </tr>
               <tr>
-                <td colspan="2">****After Party는 아직 장소가 미정입니다.</td>
+                <td colspan="2">****After Party는 C5 컨퍼런스 홀에서 진행되며 연사와 참가자간의 Q&A와 참가자간의 아이스브레이킹 등이 준비되어 있습니다.</td>
               </tr>
             </tfoot>
             <tbody>
