--- a/about.html
+++ b/about.html
@@ -14,16 +14,6 @@
 
     <link rel="stylesheet" href="./css/common.css">
     <link href="https://tedcdnpa-a.akamaihd.net/favicon.ico" rel="shortcut icon">
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-68683638-1', 'auto');
-      ga('send', 'pageview');
-
-    </script>
   </head>
           
 
@@ -73,8 +63,8 @@
             <div class="thumbnail">
               <img src="./images/tedxpostech.png">
             </div>
-            <h3>2015 TEDxPOSTECH<br>'?'(Question Mark)</h3>
-            <p>제2회 TEDxPOSTECH의 주제는 ‘?’입니다. 질문을 상징하는 물음표는 다양한 의미로 해석될 수 있습니다. 물음표는 질문을 할 때 사용되는 문장부호이기도 하지만, 이번 TEDxPOSTECH에서는 ‘우리 모두가 해결해야 하는 질문’, ‘사회에 던지고 싶은 질문’, ‘한 때 치열하게 고민하면서 결국 답을 찾아낸 질문’ 등 다양한 물음표에 대해 얘기하고자 합니다. 질문에는 답이 있어도 되고, 없어도 됩니다. 저희는 TEDxPOSTECH을 통해 서로가 서로의 고민, 질문거리와 그에 대한 생각을 나누어 보자는 취지에서 ‘?’를 주제로 정하였습니다.</p>
+            <h3>2015 TEDxPOSTECH<br>Unlimited</h3>
+            <p>제3회 TEDxPOSTECH의 주제는 ‘unlimited’입니다. ‘unlimited’를 주제로 삼은 까닭은, 저희 TEDxPOSTECH을 통해 POSTECH의 구성원들이 서로의 limit와 unlimit에 대한 고민과 경험을 나누고 한계에 대한 새로운 시각들을 나누기 위함입니다. 여러분은 unlimited(제한되지 않은) 라는 주제를 통해 재미있는 방식으로 한계를 극복하거나, 한계를 강점으로 바꿔 자신만의 분야를 개척한 이야기 등 다양한 시각에서 접근하고, 활용하는 limit에 대해 이야기 나누게 될 것입니다. 여러분은 limit을 어떤 시각으로 바라보고 다루려 하시나요?</p>
           </div>
 
         </div>
