finish sponsor page

--- a/2011.html
+++ b/2011.html
@@ -28,7 +28,7 @@
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
-              <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
+              <li id="active"><a href="2011.html">2011 TEDxPOSTECH</a></li>
             </ul>
           </li>
           <li><a href="speakers.html">Speakers</a></li>
