--- a/2015.html
+++ b/2015.html
@@ -27,7 +27,7 @@
           <li><a href="about.html">About</a></li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
+              <li id="active"><a href="2015.html">2015 TEDxPOSTECH</a></li>
               <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
             </ul>
           </li>
@@ -284,7 +284,7 @@
           <div class="col-xs-4">
             <div class="thumbnail">
               <a href="http://www.postech.ac.kr/" target="_blank">
-                <img src="./images/sponsors/postech.png">
+                <img src="./images/sponsors/2015/postech.png">
               </a>
             </div>
           </div>
@@ -292,7 +292,7 @@
           <div class="col-xs-4">
             <div class="thumbnail">
               <a href="https://www.pentasecurity.com/" target="_blank">
-                <img src="./images/sponsors/pentasecurity.png">
+                <img src="./images/sponsors/2015/pentasecurity.png">
               </a>
             </div>
           </div>
@@ -308,7 +308,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/postechpbs" target="_blank">
-                <img src="./images/sponsors/pbs.png">
+                <img src="./images/sponsors/2015/pbs.png">
               </a>
             </div>
           </div>
@@ -316,7 +316,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/PoApper" target="_blank">
-                <img src="./images/sponsors/poapper.png">
+                <img src="./images/sponsors/2015/poapper.png">
               </a>
             </div>
           </div>
@@ -324,7 +324,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/ramenberavo" target="_blank">
-                <img src="./images/sponsors/beravo.jpg">
+                <img src="./images/sponsors/2015/beravo.jpg">
               </a>
             </div>
           </div>
@@ -332,7 +332,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="https://www.facebook.com/AgitPohang" target="_blank">
-                <img src="./images/sponsors/agit.jpg">
+                <img src="./images/sponsors/2015/agit.jpg">
               </a>
             </div>
           </div>
@@ -348,7 +348,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="http://www.twosome.co.kr/" target="_blank">
-                <img src="./images/sponsors/twosome.jpg">
+                <img src="./images/sponsors/2015/twosome.jpg">
               </a>
             </div>
           </div>
@@ -356,7 +356,7 @@
           <div class="col-xs-4">
             <div class="thumbnail">
               <a href="http://www.dominos.co.kr/" target="_blank">
-                <img src="./images/sponsors/domino.jpg">
+                <img src="./images/sponsors/2015/domino.jpg">
               </a>
             </div>
           </div>
@@ -364,7 +364,7 @@
           <div class="col-xs-2">
             <div class="thumbnail">
               <a href="http://map.naver.com/local/siteview.nhn?code=36957506" target="_blank">
-                <img src="./images/sponsors/rio.jpg">
+                <img src="./images/sponsors/2015/rio.jpg">
               </a>
             </div>
           </div>
