--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
           <a href="index.html"><img src="./images/logo.png"></a>
         </div>
         <ul class="pull-right nav nav-pills">
-          <li><a href="about.html">About</a></li>
+          <li id="active"><a href="about.html">About</a></li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Past Event <span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a href="2015.html">2015 TEDxPOSTECH</a></li>
@@ -63,7 +63,7 @@
             <div class="thumbnail">
               <img src="./images/tedxpostech.png">
             </div>
-            <h3>2015 TEDxPOSTECH<br>Unlimited</h3>
+            <h3>2016 TEDxPOSTECH<br>Unlimited</h3>
             <p>제3회 TEDxPOSTECH의 주제는 ‘unlimited’입니다. ‘unlimited’를 주제로 삼은 까닭은, 저희 TEDxPOSTECH을 통해 POSTECH의 구성원들이 서로의 limit와 unlimit에 대한 고민과 경험을 나누고 한계에 대한 새로운 시각들을 나누기 위함입니다. 여러분은 unlimited(제한되지 않은) 라는 주제를 통해 재미있는 방식으로 한계를 극복하거나, 한계를 강점으로 바꿔 자신만의 분야를 개척한 이야기 등 다양한 시각에서 접근하고, 활용하는 limit에 대해 이야기 나누게 될 것입니다. 여러분은 limit을 어떤 시각으로 바라보고 다루려 하시나요?</p>
           </div>
 
