--- a/organizers.html
+++ b/organizers.html
@@ -32,7 +32,7 @@
             </ul>
           </li>
           <li><a href="speakers.html">Speakers</a></li>
-          <li><a href="organizers.html">Organizers</a></li>
+          <li id="active"><a href="organizers.html">Organizers</a></li>
           <li><a href="sponsors.html">Sponsors</a></li>
           <li><a href="register.html">Register</a></li>
         </ul>
