--- a/sponsors.html
+++ b/sponsors.html
@@ -33,7 +33,7 @@
           </li>
           <li><a href="speakers.html">Speakers</a></li>
           <li><a href="organizers.html">Organizers</a></li>
-          <li><a href="sponsors.html">Sponsors</a></li>
+          <li id="active"><a href="sponsors.html">Sponsors</a></li>
           <li><a href="register.html">Register</a></li>
         </ul>
       </div>
@@ -66,108 +66,134 @@
         <div class="row">
 
           <div class="col-xs-12">
-            <p>with</p>
+            <p>with</p><br>
           </div>
 
         </div>
 
         <div class="row">
 
-          <div class="col-xs-2"></div>
-
           <div class="col-xs-4">
-            <div class="thumbnail">
-              <a href="http://www.postech.ac.kr/" target="_blank">
-                <img src="./images/sponsors/postech.png">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="http://aif.postech.ac.kr/">
+                <img src="./images/sponsors/2016/ec.png">
               </a>
             </div>
           </div>
 
           <div class="col-xs-4">
-            <div class="thumbnail">
-              <a href="https://www.pentasecurity.com/" target="_blank">
-                <img src="./images/sponsors/pentasecurity.png">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="http://iptt.postech.ac.kr/index.php">
+                <img src="./images/sponsors/2016/eedc.png">
               </a>
             </div>
           </div>
 
-          <div class="col-xs-2"></div>
+          <div class="col-xs-4">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="http://postechholdings.com/">
+                <img src="./images/sponsors/2016/gjjh.jpg">
+              </a>
+            </div>
+          </div>
 
         </div>
 
         <div class="row">
 
-          <div class="col-xs-2"></div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/postechpbs" target="_blank">
-                <img src="./images/sponsors/pbs.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/PoApper" target="_blank">
-                <img src="./images/sponsors/poapper.png">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/ramenberavo" target="_blank">
-                <img src="./images/sponsors/beravo.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="https://www.facebook.com/AgitPohang" target="_blank">
-                <img src="./images/sponsors/agit.jpg">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-xs-2"></div>
-
-        </div>
-
-        <div class="row">
-
-          <div class="col-xs-2"></div>
-
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="http://www.twosome.co.kr/" target="_blank">
-                <img src="./images/sponsors/twosome.jpg">
+          <div class="col-xs-4">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="http://iptt.postech.ac.kr/">
+                <img src="./images/sponsors/2016/bic.png">
               </a>
             </div>
           </div>
 
           <div class="col-xs-4">
-            <div class="thumbnail">
-              <a href="http://www.dominos.co.kr/" target="_blank">
-                <img src="./images/sponsors/domino.jpg">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.pentasecurity.com/?lang=ko">
+                <img src="./images/sponsors/2016/pentasecurity.png">
               </a>
             </div>
           </div>
 
-          <div class="col-xs-2">
-            <div class="thumbnail">
-              <a href="http://map.naver.com/local/siteview.nhn?code=36957506" target="_blank">
-                <img src="./images/sponsors/rio.jpg">
+          <div class="col-xs-4">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.mrpizza.co.kr/">
+                <img src="./images/sponsors/2016/mrpizza.png">
               </a>
             </div>
           </div>
-
-          <div class="col-xs-2"></div>
 
         </div>
 
-        
+        <div class="row">
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+                <img class="img-responsive" src="./images/sponsors/2016/aulete.png">
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+                <img src="./images/sponsors/2016/musasui.gif">
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="http://www.pasiya.co.kr/index.php">
+                <img src="./images/sponsors/2016/pasiya.png">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/postechpbs/?fref=ts">
+                <img src="./images/sponsors/2016/pbs.png">
+              </a>
+            </div>
+          </div>          
+
+        </div>
+
+        <div class="row">
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/AgitPohang/?fref=ts">
+                <img src="./images/sponsors/2016/agit.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/ramenberavo/?fref=ts">
+                <img src="./images/sponsors/2016/beravo.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.twosome.co.kr:7009/microsite/2016/autumn/intro.asp">
+                <img src="./images/sponsors/2016/twosome.jpg">
+              </a>
+            </div>
+          </div>
+
+          <div class="col-xs-3">
+            <div class="thumbnail center-block">
+              <a target="_blank" href="https://www.facebook.com/PoApper/?fref=ts">
+                <img src="./images/sponsors/2016/poapper.png">
+              </a>
+            </div>
+          </div>
+
+        </div>
 
       </div>
     </div>
