--- a/register.html
+++ b/register.html
@@ -34,7 +34,7 @@
           <li><a href="speakers.html">Speakers</a></li>
           <li><a href="organizers.html">Organizers</a></li>
           <li><a href="sponsors.html">Sponsors</a></li>
-          <li><a href="register.html">Register</a></li>
+          <li id="active"><a href="register.html">Register</a></li>
         </ul>
       </div>
     </div>
@@ -170,7 +170,7 @@
             </div>
 
             <h3>Regular Registration</h3>
-            <p>Regular 참가신청 비용은 예약 10,000원이며 현장 납입시 15,000원입니다. 신청은 10월 12일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
+            <p>Regular 참가신청 비용은 예약 10,000원이며 현장 납입시 15,000원입니다. 신청은 10월 15일 밤 9시부터 가능하며, 참가신청을 보내신 후 납부 기간에 참가비 10,000원을 입금하시면 됩니다. TEDx의 규정에 따라 청중은 100명으로 제한되오니 양해 부탁드립니다.</p>
             <p><a type="button" data-toggle="modal" data-target="#form" class="btn btn-primary" role="button" id="available">Register</a></p>
 
           </div>
