--- a/speakers.html
+++ b/speakers.html
@@ -31,7 +31,7 @@
               <li><a href="2011.html">2011 TEDxPOSTECH</a></li>
             </ul>
           </li>
-          <li><a href="speakers.html">Speakers</a></li>
+          <li id="active"><a href="speakers.html">Speakers</a></li>
           <li><a href="organizers.html">Organizers</a></li>
           <li><a href="sponsors.html">Sponsors</a></li>
           <li><a href="register.html">Register</a></li>
