change sponsor image

--- a/organizers.html
+++ b/organizers.html
@@ -78,7 +78,7 @@
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/rnjsdmswl.jpg" class="img-circle center-block">
+              <img src="./images/organizers/2016/rlacodbs.jpg" class="img-circle center-block">
               <p class="center-block">김채윤<br>PHYS 15</p>
             </div>
           </div>
@@ -105,7 +105,7 @@
           </div>
           <div class="col-xs-3">
             <div class="profile center-block">
-              <img src="./images/dlwhdrjs.jpg" class="img-circle center-block">
+              <img src="./images/organizers/2016/chltkdqja.png" class="img-circle center-block">
               <p class="center-block">최상범<br>EE 15</p>
             </div>
           </div>
