--- a/sponsors.html
+++ b/sponsors.html
@@ -131,7 +131,7 @@
 
           <div class="col-xs-3">
             <div class="thumbnail center-block">
-                <img class="img-responsive" src="./images/sponsors/2016/aulete.png">
+                <img class="img-responsive" src="./images/sponsors/2016/aulete.jpg">
             </div>
           </div>
 
