--- a/organizers.html
+++ b/organizers.html
@@ -85,7 +85,7 @@
           <div class="col-xs-3">
             <div class="profile center-block">
               <img src="./images/organizers/2016/dlalsrud.jpg" class="img-circle center-block">
-              <p class="center-block">이민경<br>ME 15</p>
+              <p class="center-block">이민경<br>MSE 15</p>
             </div>
           </div>
         </div>
